<resources>
    <string name="app_name">SmartRailway</string>
    <string name="odour_monitoring_system">Odour Monitoring System</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="usernamestring">Username</string>
    <string name="odour_monitor_dashboard">Odour Monitor Dashboard</string>
    <string name="coachD10InitialConcentration" />
    <string name="coach_d10">Coach D10</string>
    <string name="coach_d2_intial_val">0</string>
    <string name="coachD10Initialval">0</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="coach_d2">Coach D2</string>
    <string name="exit">Exit</string>
    <string name="auto_control_board">Auto Control Board</string>
    <string name="warning_to_manager">Warning to Manager</string>
    <string name="warning_to_housekeeping">Warning to Housekeeping</string>
    <string name="exitauto">Exit</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="coach_no">Coach No</string>
    <string name="coach_no_housekeeping">Coach No</string>
    <string name="coach_no_hint1">Coach No</string>
    <string name="coach_no_hint2">Coach No</string>
    <string name="manual_control_board">Manual Control Board</string>
    <string name="manual_mode">Manual Mode</string>
</resources>