<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/material_dynamic_neutral20"
    tools:context=".ServiceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odour_monitor_dashboard"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="20dp"
        />

    <Button
        android:id="@+id/startServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#6200EE"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="40dp"
        android:textColor="@color/white"
        android:text="@string/start_service"
        app:iconTint="#0FE418"
        app:rippleColor="#0BE313" />

    <Button
        android:id="@+id/stopServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:backgroundTint="#6200EE"
        android:paddingHorizontal="40dp"
        android:text="@string/stop_service"
        app:iconTint="#E40808"
        app:rippleColor="#E10C0C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:id="@+id/coachD2Label"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/coach_d2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/coachD2Concentration"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:text="@string/coach_d2_intial_val"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:id="@+id/coachD10Label"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/coach_d10"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/coachD10Concentration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:text="@string/coachD10Initialval"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="23sp" />

    </LinearLayout>

    <Switch
        android:id="@+id/autoBtn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/manual_mode"
        android:textColor="@color/material_dynamic_primary60"
        android:textSize="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/material_dynamic_neutral50"
        android:layout_marginTop="40dp"
        android:textColor="@color/material_dynamic_neutral90"
        android:paddingHorizontal="50dp"
        android:text="@string/exit" />

</LinearLayout>