<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral20"
    tools:context=".AutoControl">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="616dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="10dp"
        android:text="@string/manual_control_board"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_neutral70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/warnManagerBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="#6200EE"
        android:layout_marginEnd="160dp"
        android:text="@string/warning_to_manager"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/warnHouseKeepingBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="#6200EE"
        android:layout_marginEnd="160dp"
        android:text="@string/warning_to_housekeeping"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warnManagerBtn" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="99dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/exitauto"
        android:textColor="@color/material_dynamic_neutral80"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warnHouseKeepingBtn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="45dp"
        android:text="@string/coach_no"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/warnManagerBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/coachNoManager"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/coach_no_hint1"
        android:inputType="text"
        android:textColorHint="@color/material_dynamic_neutral60"
        app:layout_constraintBottom_toTopOf="@+id/warnManagerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="45dp"
        android:text="@string/coach_no_housekeeping"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/warnHouseKeepingBtn"
        app:layout_constraintEnd_toStartOf="@+id/coachNoHouseKeeping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warnManagerBtn"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/coachNoHouseKeeping"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/coach_no_hint2"
        android:inputType="text"
        android:textColorHint="@color/material_dynamic_neutral60"
        app:layout_constraintBottom_toTopOf="@+id/warnHouseKeepingBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/warnManagerBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>